--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -50,12 +50,14 @@
         grid-column: 1;
     }
     .box-1 {
-        grid-row: 1;
-        text-align: left;
+        grid-row: 2;
+
     }
     .box-2 {
-        grid-row: 2;
+        grid-row: 1;
         background: #000;
+        padding: 0;
+        padding: 50px;
     }
     .box-3 {
         grid-row: 3;
