--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-$font-stack:"Montserrat", sans-serif;
+$font-stack: "Montserrat", sans-serif;
 $primary-color: rgb(251, 118, 3);
 
 * {
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-html, body {
-font-family: $font-stack;
-scroll-behavior: smooth;
+html,
+body {
+    font-family: $font-stack;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -25,7 +26,7 @@ ul {
 
 .container {
     max-width: 1300px;
-    margin:  0 auto;
+    margin: 0 auto;
     padding: 0 30px;
     overflow: auto;
 }
@@ -46,25 +47,28 @@ form {
         display: inline;
         margin-bottom: 1rem;
     }
+
     .form-control {
         display: block;
         width: 100%;
         padding: 1rem;
         border-radius: 3px;
         margin-bottom: 1rem;
-   
+        background: #eaeaea7b;
     }
+
     button {
         width: 100%;
         background: #000;
         color: #fff;
         margin-bottom: 2rem;
-        
+
     }
+
     .button-2::after {
-       content: "✔";
-       color:green;
-       font-size: 1rem;
+        content: "✔";
+        color: green;
+        font-size: 1rem;
     }
 }
 
@@ -75,43 +79,50 @@ form {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(0, auto);
 }
+
 #mainheader {
     text-align: center;
     padding: 20px;
     margin: 0 auto;
+
     .logo {
         grid-column: 1;
         grid-row: 1;
+
         img {
             width: 150px;
             margin-top: 1.5rem;
         }
     }
+
     .navbar {
         width: 100%;
         grid-column: 2;
         grid-row: 1;
-        
+
         ul {
             text-align: center;
             margin: 0 auto;
+
             li {
                 margin-top: 2rem;
                 display: inline-block;
                 margin-left: 1rem;
+                font-size: small;
                 a:hover,
                 a:active {
-                color: violet;
+                    color: violet;
                 }
+
                 a {
                     color: #000;
                 }
-               
+
             }
         }
     }
+
     .button-1 {
-        position: relative;
         width: 50%;
         grid-column: 3;
         grid-row: 1;
@@ -122,7 +133,10 @@ form {
         font-size: small;
         text-align: center;
     }
-   
+
+
+
+
     //     content: "✈";
     //     font-size: 2rem;
     //     margin: 0 auto;
@@ -135,9 +149,9 @@ form {
     //    margin-top: -18px;
     //    margin-left: 6px;
     //     display: inline-block;
-     
+
     //     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 1);
-       
+
     // }
 }
 
@@ -147,45 +161,54 @@ form {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(400px, auto);
 }
+
 #stories {
     .box {
         color: #fff;
         text-align: left;
+
         h1 {
             font-size: 2rem;
             margin-bottom: 1rem;
             font-weight: 400;
         }
+
         p {
             margin-bottom: 1rem;
         }
+
         a {
             color: #fff;
         }
-       
+
     }
+
     .box-1 {
         grid-column: 1/3;
         grid-row: 1/3;
-        background: url("/images/showcase-1.jpg"); 
+        background: url("/images/showcase-1.jpg");
     }
+
     .box-2 {
         grid-column: 3/4;
         grid-row: 1/3;
         background: $primary-color;
         padding: 250px 50px 50px 50px;
     }
+
     .box-3 {
         grid-column: 1/2;
         grid-row: 3;
         background: $primary-color;
         padding: 70px;
     }
+
     .box-4 {
         grid-column: 2/3;
         grid-row: 3;
         background: url("/images/showcase-2.jpg");
     }
+
     .box-5 {
         grid-column: 3/4;
         grid-row: 3;
@@ -193,7 +216,7 @@ form {
         padding: 70px;
     }
 
-    .box-1, 
+    .box-1,
     .box-4 {
         background-position: center;
         background-repeat: no-repeat;
@@ -207,42 +230,51 @@ form {
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(400px, auto);
 }
+
 #features {
     margin-bottom: 3rem;
+
     .card {
-     font-size: small;
-     font-weight: 300;
-     color: #fff;
-     padding: 300px 30px 30px 30px;
-     .h4 {
-        margin-bottom: 1rem;
-    }
-    h5 {
-        margin-bottom: 1rem;
-    }
-    hr {
-        margin-bottom: 1rem;
-    }
-    a {
+        font-size: small;
+        font-weight: 300;
         color: #fff;
+        padding: 300px 30px 30px 30px;
+
+        .h4 {
+            margin-bottom: 1rem;
+        }
+
+        h5 {
+            margin-bottom: 1rem;
+        }
+
+        hr {
+            margin-bottom: 1rem;
+        }
+
+        a {
+            color: #fff;
+        }
     }
-    }
-    
+
     .card-1 {
         grid-column: 1;
         grid-row: 1;
         background: url("/images/stories-building.jpg");
     }
+
     .card-2 {
         grid-column: 2;
         grid-row: 1;
         background: url("/images/stories-city.jpg");
     }
+
     .card-3 {
         grid-column: 3;
         grid-row: 1;
         background: url("/images/stories-mountain.jpg");
     }
+
     .card-4 {
         grid-column: 4;
         grid-row: 1;
@@ -265,27 +297,33 @@ form {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(200px, auto);
 }
+
 #pricing {
     width: 80%;
     margin: 0 auto;
     text-align: center;
     gap: 40px;
+
     .pricing-box {
         img {
             width: 40%;
         }
+
         h3 {
             margin: 1rem 0;
         }
     }
+
     .pricing-box-1 {
         grid-column: 1;
         grid-row: 1;
     }
+
     .pricing-box-2 {
         grid-column: 2;
         grid-row: 1;
     }
+
     .pricing-box-3 {
         grid-column: 3;
         grid-row: 1;
@@ -300,11 +338,12 @@ form {
         margin: 2rem 0;
         text-transform: uppercase;
     }
+
     form {
         width: 50%;
         margin: 0 auto;
     }
-  
+
 }
 
 //footer
@@ -313,30 +352,37 @@ form {
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(100px, auto);
 }
+
 #footer {
     background: $primary-color;
     text-align: center;
     padding: 3rem;
     margin: 0 auto;
+
     .footer-grid-1 {
         img {
             width: 200px;
             margin-bottom: 4rem;
         }
+
         .social {
             img {
                 width: 50px;
             }
         }
     }
+
     .footer-grid-2 {
-            margin-top: 5rem;
-            text-align: center;
+        margin-top: 5rem;
+        text-align: center;
     }
 
     .footer-grid-3 {
+        color: #fff;
+
         a {
             margin-bottom: 4rem;
+            color: #fff;
         }
 
         h3 {
